# durable-agent-sample-without-functions

./: Makefile  README.md  azure.yaml
quickstarts/python/azure-functions/03_reliable_streaming/: demo.http
samples/dotnet/azure-functions/agentic-travel-planner-with-reliable-streaming/: .gitignore  Program.cs  README.md  TravelPlannerFunctions.csproj  architecture.md  azure.yaml  local.settings.json.template
samples/dotnet/azure-functions/agentic-travel-planner-with-reliable-streaming/Frontend/: package-lock.json  package.json  swa-cli.config.json
samples/dotnet/azure-functions/agentic-travel-planner-with-reliable-streaming/Functions/: ConversationalAgentApi.cs  TravelPlannerActivities.cs  TravelPlannerApi.cs  TravelPlannerOrchestrator.cs
samples/dotnet/azure-functions/agentic-travel-planner-with-reliable-streaming/Models/: TravelPlannerModels.cs
samples/dotnet/azure-functions/agentic-travel-planner-with-reliable-streaming/Properties/: launchSettings.json
samples/dotnet/azure-functions/agentic-travel-planner-with-reliable-streaming/Streaming/: RedisStreamResponseHandler.cs
samples/dotnet/azure-functions/agentic-travel-planner-with-reliable-streaming/Tools/: CurrencyConverterTool.cs  PlanTripTool.cs
samples/dotnet/azure-functions/agentic-travel-planner-with-reliable-streaming/infra/: main.bicep  main.json  main.parameters.json
scripts/: assign-openai-role.sh
src/: README.md
src/api/: pyproject.toml  worker.py
src/api/tools/: currency_converter.py
src/frontend/: package-lock.json
(+6 files in other folders)
