[project]
name = "travel-planner-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Chas Sweeting",email = "77371250+clsweeting@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "azure-identity (>=1.25.2,<2.0.0)",
    "azure-storage-blob (>=12.28.0,<13.0.0)",
    "openai (>=2.21.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "durabletask (>=1.3.0,<2.0.0)",
    "agent-framework-durabletask (==1.0.0b260212)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
